# nema-connectome-artix7

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_STATUS.json  FINAL_STATUS.md  Makefile  README.md  SECURITY.md  build.sh  example_b1_small_subgraph.json  example_b2_mid_scale.json  example_b2_mid_scale_n128_e1000.json  example_b2_mid_scale_n128_e3000.json  example_b2_mid_scale_n64_e1000.json  example_b2_mid_scale_n64_e3000.json  example_b3_kernel_302.json  example_b4_celegans_external_bundle.json  example_b5_synth_n128_e2600_s504.json  example_b5_synth_n160_e3400_s505.json  example_b5_synth_n48_e700_s501.json  example_b5_synth_n72_e1200_s502.json  example_b5_synth_n96_e1800_s503.json  example_b6_delay_small.json  milestones_amp_plus.json  milestones_amp_plus_v2.json  mypy.ini  nema_ir.proto  pyproject.toml  requirements-dev.txt  review_pack_vNEXT.md  ruff.toml  spec.md
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.codex/: config.toml
.github/: dependabot.yml
audit_out/: NEMA_AUDIT_REPORT.md
benchmarks/: aliases.json
connectomes/: celegans_herm_c302_bundle.json  test_bundle.json
docs/: ARCHITECTURE.md  ARTIX7_EXECUTION.md  BOARD_MEASUREMENT_PROTOCOL.md  CLAIMS.md  CODEX_RUN_CONTRACT.md  CONNECTOME_BUNDLE.md  COST_MODEL.md  DEPLOY.md  FPGA_MEASUREMENT.md  GATE_STATUS.md  HW_SETUP_UBUNTU24.md  HW_VIVADO.md  LICENSING.md  OPTIMIZATION.md  POWER_METHODOLOGY.md  READINESS_AUDIT.md  REPRODUCE.md  REVIEWER_GUIDE.md  STATUS_POLICY.md  VERIF.md  ZENODO.md  ZENODO_STATUS.md  nema_dsl_v0.1.md
(+455 files in other folders)
