[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nema"
version = "0.1.0"
description = "NEMA v0.1 scaffold CLI and toolchain stubs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nema = "nema.cli:main"

[tool.setuptools.packages.find]
include = ["nema*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m \"not hw and not integration\""
markers = [
  "hw: tests that require hardware toolchain or long HW flows",
  "integration: slow integration tests excluded from default quick suite",
]
